<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="label">Talk</string>
    <string name="app_name">West Wind</string>
    <string name="love_letter">是否应验了我曾说过的那句话\n
        &#160;&#160;情到深处人寂寞\n&#160; &#160; 
        &#160; &#160; &#160; &#160; --蔡琴\n\n</string>
    <string name="old_time">何当共剪西窗烛\n
		却话巴山夜雨时\n&#160; &#160;&#160; &#160;  
        &#160; &#160; &#160; &#160; --李商隐\n\n</string> 
    <string name="long_letter">三人行必有我师\n
        &#160; &#160;&#160; &#160; &#160; &#160;
        &#160; &#160;&#160; &#160; --孔子\n\n</string>                
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="action_settings">Settings</string>
    <string name="title_section0">Daily</string>
    <string name="title_section1">Times</string>
    <string name="title_section2">Dialog</string>
    <string name="title_section3">Records</string>
    <string name="fast_record">&#160; fast record...</string>
    <string name="fast_comment">&#160; add comment...</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_gallery">Take Gallery</string>
    <string name="take_tape">Take Tape</string>
    <string name="dis_account">account status</string>
    <string name="rich_measure">diamond count</string>
    <string name="dis_preview">time preview</string>
    <string name="dis_preview_hint">numbers of time preview</string>
    <string name="dis_connection">青石所系</string>
    <string name="action_confirm">confirm</string>
    <string name="send">send</string>
    <string name="setting_date">设定幸运日期，幸运日会将往事时
        光全部呈现\n如跳过设定，默认为当前日期\n可以在设定菜单中重新设置幸运日期</string>
	<!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <string name="bluestone">Who will see this time?\n</string>
    <string name="user">me</string>
    <string name="user_name">user name</string>
    <string name="luck_day">lucky day</string>
    <string name="friend">friend</string>
    <string name="add_friend">find friend</string>
    <string name="store">store</string>
    <string name="setting">setting</string>
	<string name="logout">logout</string>   
	<string name="add">add</string>
	<string name="save">save</string>
	<string name="tag_name">tag name</string>
	<string name="input_tag">input tag name, such as sun moon star etc</string>
	
    <string name="menu_settings">Settings</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title">Notes</string>
    <string name="list">List</string>
    <string name="div">-</string>
    <string name="send_via">Send via</string>
    <string name="input_content">Please input content!</string>
    <string name="search">Search</string>
    <string name="notes_empty">No content</string>
    <string name="modify">Edit</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="ago" formatted="false">%1$d %2$s ago</string>
    <string name="delete_note">Delete this note</string>
    <string name="title_bar_cancel">Cancel</string>
    <string name="title_bar_save_send">Next</string>
    <string name="title_bar_finish">Done</string>
    <string name="delete_note_confirm">Delete</string>
    <string name="share_dialog_send_method">Please select</string>
    <string name="share_dialog_send_to_me">Send to Me</string>
    <string name="share_dialog_send_to_friend">Send to Friend</string>
    <string name="share_dialog_send_to_stranger">Send to Stranger</string>
    <string name="share_dialog_send_to_tag">Send to Tag</string>
    <string name="share_dialog_send_via_long_length_weibo">Send as a picture</string>
    <string name="share_dialog_cancel">Cancel</string>
    <string name="delete_dialog_confirm">Delete this note?</string>
    <string name="toast_text_copied">Text copied</string>
    <string name="toast_weibo_not_found">Sina Weibo not found</string>
    <string name="email_select_app_title">Select an email client</string>
    <string name="weibo_length_too_long_msg">Over 140 character limit</string>
    <string name="long_length_weibo_power_by">Powered by Hammer mobile.</string>
    <string name="long_length_weibo_stored_in_gallery">Picture saved in gallery</string>
    <string name="long_length_weibo_store_error">Storage error</string>
    <string name="first_start_tip1">Tap top right button to create a note.</string>
    <string name="first_start_tip2">Swipe right to delete a note.</string>
    <string name="first_start_tip3">Hold and drag to change order.</string>
    <string name="first_start_tip4">"Tap here to find out what is inside ^_^ 

You can post your notes to Sina Weibo, with no 140 character limit. If the note ever reached 140 character count, it will become a picture with elegant typesetting and beautiful typeface. Just try tap the little plane button to send this note via Sina Weibo."</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="future">Future</string>
    <string name="call_info" formatted="false">%1$s Call with %2$s</string>
    <string name="share_toast_success_text">Authorized</string>
    <string name="toast_failed_text">Authorization failed</string>
    <string name="toast_net_error">Connection timeout</string>
    <string name="share">Share</string>
    <string name="sinaweibo_send">Send</string>
    <string name="sinaweibo_share_dialog_title">Sina Weibo</string>
    <string name="first_lonin_sinaweibo_notice">Log in using Sina Weibo account to share weibo</string>
    <string name="sinaweibo_share_edit_text_hint">What’s new with you......</string>
    <string name="sinaweibo_share_text_limit_exceeded">Over 140 character limit</string>
    <string name="sinaweibo_account_add">Add</string>
    <string name="sinaweibo_account_manager">Accounts</string>
    <string name="sinaweibo_delete_account_dialog_confirm">Delete this account?</string>
    <string name="sinaweibo_account_empty">No Sina Weibo account</string>
    <string name="sinaweibo_shareing">Sending</string>
    <string name="sinaweibo_share_success">Sent</string>
    <string name="sinaweibo_share_failed">Sending failed</string>
    <string name="sinaweibo_share_default_text">Share image</string>
    <string name="sinaweibo_setting_bind">Bind Sina Weibo account</string>
    <string name="sinaweibo_setting_bindwithaccount">Account binded</string>
    <string name="sinaweibo_setting_unbind">Unbind</string>
    <string name="sinaweibo_defalut_name">Account name</string>
    <string name="delete">Delete</string>
    <string name="null_note_title">Note is empty</string>
    <string name="null_note_summary">Tap top right button to create a note</string>
    <string name="error_title">Can not generate a picture</string>
    <string name="error_message">This note contains too many characters to generate a picture</string>
    <string name="facebook">Facebook</string>
    <string name="weibo">Weibo</string>
    <string name="we_chat">WeChat</string>
    <string name="twitter">Twitter</string>
    <string name="qzone">Qzone</string>
    <string name="we_chat_timeline">Moments</string>
    <string name="support_email">support@smartisan.cn</string>
    <string name="smartisan">www.smartisan.cn</string>
    <string name="copyrights">Copyrights 2013, Smartisan Tech (Beijing) Co., Ltd. All Rights Reserved.</string>
    <string name="share_msg">I just installed the Smartisan Notes. Smartisan thinks that it is probably the most beautiful note taking app ever :-) It allows you to send your note to Sina Weibo. Search “Smartisan Notes” in major Android app markets to download.</string>
    <string name="update">Update</string>
    <string name="check_update">Check update</string>
    <string name="check_update_message">A newer version of the Smartisan Notes (version V1.2) has been detected.</string>
    <string name="update_download">Download</string>
    <string name="update_cancel">Cancel</string>
    <string name="dialog_title_cancel">Cancel</string>
    <string name="dialog_send_message">Send message</string>
    <string name="dialog_add_contact">Add to contacts</string>
    <string name="dialog_send_mail">Send e-mail</string>
    <string name="dialog_add_mail_contact">Add e-maill address to contacts</string>
    <string name="dialog_call">Call</string>
    
    <string name="publish_secret_option_page_item_conversation">接收私信</string>
	<string name="publish_secret_tip">谁会看到这个秘密？</string>
	<string name="publish_secret_content_hint">匿名发表秘密</string>   
</resources>
