<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    style="@style/NavPage">

    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/dis_account"
            android:textSize="20sp" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
			    android:id="@+id/user_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:text="@string/user_name"
	            android:textSize="22sp" />
			<TextView
			    android:id="@+id/my_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:textSize="20sp" />	
		</LinearLayout>   
		     
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
			    android:id="@+id/rich_measure"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:text="@string/rich_measure"
	            android:textSize="22sp" />
			<TextView
			    android:id="@+id/rich_number"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:textSize="20sp" />	
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:src="@drawable/new_selected" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
			    android:id="@+id/luck_day"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:text="@string/luck_day"
	            android:textSize="22sp" />
			<TextView
			    android:id="@+id/my_luck_day"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center_horizontal"
	            android:padding="10dp"
	            android:textSize="20sp" />

		</LinearLayout>   		
	</LinearLayout> 
	<LinearLayout
	    android:id="@+id/vtable"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp">
	</LinearLayout>
	
</LinearLayout>